add container test